--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   bot:
@@ -34,6 +33,14 @@ services:
   redis:
     image: redis:6
     container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
     ports:
       - "6379:6379"
     volumes:
